[project]
name = "movie-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
